cs109a_hw0.ipynb

--- a/Labs/Lab0_Python_Basics/do_this_before_lab_0.ipynb
+++ b/Labs/Lab0_Python_Basics/do_this_before_lab_0.ipynb
@@ -336,9 +336,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IPython version:       7.4.0 (need at least 5.0.0)\n",
+      "Numpy version:        1.16.3 (need at least 1.12.0)\n",
+      "SciPy version:         1.2.1 (need at least 0.19.0)\n",
+      "Pandas version:       0.24.2 (need at least 0.20.0)\n",
+      "Matplotlib version:     3.0.3 (need at least 2.0.0)\n",
+      "Scikit-Learn version: 0.20.3 (need at least 0.18.1)\n",
+      "requests version:     2.21.0 (need at least 2.9.0)\n",
+      "BeautifulSoup version: 4.7.1 (need at least 4.4)\n",
+      "Seaborn version: 0.9.0 (need at least 0.7)\n"
+     ]
+    }
+   ],
    "source": [
     "#IPython is what you are using now to run the notebook\n",
     "import IPython\n",
@@ -413,10 +429,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The %... is an iPython thing, and is not part of the Python language.\n",
