updating code to be compatiable with admin version of the freelancer's dashboard

--- a/FreelancerAnalysis.ipynb
+++ b/FreelancerAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,10 @@
     "# Click login\n",
     "login_button.click()\n",
     "\n",
+    "# Click \"user mode\" button to switch to admin mode\n",
+    "mode_button = driver.find_element_by_link_text(\"user mode\")\n",
+    "mode_button.click()\n",
+    "\n",
     "freelancer_list = [\"aladao\", \"cching\", \"crollins\",\"cjones\",\"eoracion\",\"sosmanollaj\",\n",
     "                   \"mjuma\", \"rasentista\", \"lmaina\", \"abernardo\",\"tmaniulit\", \"rsantos\", \"jsmolinski\", \"rfoster\"]\n",
     "\n",
@@ -85,9 +89,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Type                          Utility Company  \\\n",
+      "0    Electric     Portland General Home/Small Business   \n",
+      "1    Electric     Portland General Home/Small Business   \n",
+      "2       Trash             Waste Pro Bradenton/Sarasota   \n",
+      "3       Water                    Sioux Falls Utilities   \n",
+      "4       Water                    Sioux Falls Utilities   \n",
+      "5         Gas                    National Grid (NGRID)   \n",
+      "6       Water                    Sioux Falls Utilities   \n",
+      "7       Water                    Sioux Falls Utilities   \n",
+      "8       Water                    Sioux Falls Utilities   \n",
+      "9       Water                    Sioux Falls Utilities   \n",
+      "10      Water                    Sioux Falls Utilities   \n",
+      "11      Water                    Sioux Falls Utilities   \n",
+      "12   Electric                        NSTAR/ Eversource   \n",
+      "13   Electric               Southern California Edison   \n",
+      "14      Water                          City of Corunna   \n",
+      "15      Water            Peoples Water Service Company   \n",
+      "16      Water            Peoples Water Service Company   \n",
+      "17      Water            Peoples Water Service Company   \n",
+      "18      Water            Peoples Water Service Company   \n",
+      "19      Water            Peoples Water Service Company   \n",
+      "20      Water            Peoples Water Service Company   \n",
+      "21      Water            Peoples Water Service Company   \n",
+      "22   Electric                                     PG&E   \n",
+      "23      Water                           City of Dinuba   \n",
+      "24      Water                           City of Dinuba   \n",
+      "25      Water                        Rincon del Diablo   \n",
+      "26      Water                        Rincon del Diablo   \n",
+      "27      Water                        Rincon del Diablo   \n",
+      "28   Electric                                     PG&E   \n",
+      "29   Electric               Southern California Edison   \n",
+      "..        ...                                      ...   \n",
+      "787       Gas                               Con Edison   \n",
+      "788     Water                                Watertown   \n",
+      "789  Electric                 Baltimore Gas & Electric   \n",
+      "790     Water                          City of Chicago   \n",
+      "791       Gas                               Con Edison   \n",
+      "792       Gas                               Con Edison   \n",
+      "793     Water  Washington Suburban Sanitary Commission   \n",
+      "794     Water  Washington Suburban Sanitary Commission   \n",
+      "795     Water  Washington Suburban Sanitary Commission   \n",
+      "796     Water  Washington Suburban Sanitary Commission   \n",
+      "797     Water                          City of Chicago   \n",
+      "798     Water  Washington Suburban Sanitary Commission   \n",
+      "799     Water                          City of Chicago   \n",
+      "800     Water  Washington Suburban Sanitary Commission   \n",
+      "801     Water                          City of Chicago   \n",
+      "802     Water                        City of Santa Ana   \n",
+      "803     Water                          City of Chicago   \n",
+      "804     Water  Washington Suburban Sanitary Commission   \n",
+      "805     Water  Washington Suburban Sanitary Commission   \n",
+      "806     Water  Washington Suburban Sanitary Commission   \n",
+      "807     Water  Washington Suburban Sanitary Commission   \n",
+      "808     Water                            City of Ionia   \n",
+      "809  Electric                     Snohomish County PUD   \n",
+      "810     Water  Washington Suburban Sanitary Commission   \n",
+      "811     Water  Washington Suburban Sanitary Commission   \n",
+      "812     Water  Washington Suburban Sanitary Commission   \n",
+      "813     Water                          City of Chicago   \n",
+      "814     Water  Washington Suburban Sanitary Commission   \n",
+      "815     Water                          City of Chicago   \n",
+      "816  Electric          United Illuminating (ElecSolar)   \n",
+      "\n",
+      "                                 Username            Account Number  \\\n",
+      "0            invoices@peakpropertymgt.com                3679580000   \n",
+      "1            invoices@peakpropertymgt.com                5218870000   \n",
+      "2                        tzadikmanagement                    118686   \n",
+      "3                          tzadikmanage13         51009870000154093   \n",
+      "4                            tzadikmanage         51010390000130600   \n",
+      "5                              eorlofsky1                0052318205   \n",
+      "6                          tzadikmanage13         51009870000153253   \n",
+      "7                          tzadikmanage13         51009870000153256   \n",
+      "8                          tzadikmanage13         51009870000154081   \n",
+      "9                          tzadikmanage13         51009870000154084   \n",
+      "10                         tzadikmanage13         51009870000154090   \n",
+      "11                         tzadikmanage13         51009870000154099   \n",
+      "12                               CSNDCOTS               26719131034   \n",
+      "13   wegohighland@selfhelpenterprises.org                3045428278   \n",
+      "14                         CavalierGreene          SH20000106000002   \n",
+      "15                            sandalwood1              280035000096   \n",
+      "16                             Sandalwood              280036000096   \n",
+      "17                            sandalwood6              280037000096   \n",
+      "18                            sandalwood5              280038000096   \n",
+      "19                            sandalwood4              280039000096   \n",
+      "20                            sandalwood2              280041000096   \n",
+      "21                            sandalwood3              280042000096   \n",
+      "22                                 GNESSF               13559231454   \n",
+      "23                              18284-001               10125718284   \n",
+      "24                              18286-001               10125718286   \n",
+      "25            gdayrit@semprautilities.com                  25880001   \n",
+      "26            gdayrit@semprautilities.com                  25880101   \n",
+      "27            gdayrit@semprautilities.com                  25880201   \n",
+      "28                                ecr210X               29142705853   \n",
+      "29                  accounts@bungalow.com                3049397761   \n",
+      "..                                    ...                       ...   \n",
+      "787                mjennings@electmgt.com           299021006050005   \n",
+      "788                                 12557                     12557   \n",
+      "789       weinbergeastasstmgr@emcmgmt.com                2680110000   \n",
+      "790                                 LUCHA              510560510560   \n",
+      "791           mmagistro@bronxprogroup.com           325033046800008   \n",
+      "792             Kfeurtado@prestigemgt.com           313853031900016   \n",
+      "793               enterprise@wegomail.com                6235750000   \n",
+      "794                  utilities1@edens.com                   3364478   \n",
+      "795                  utilities1@edens.com                   3364296   \n",
+      "796                  utilities1@edens.com                   3364411   \n",
+      "797                             ResideLiv             1178531501993   \n",
+      "798                     bboling@edens.com                   4126892   \n",
+      "799                     EmbraceLiving2017              838565436340   \n",
+      "800                    aruiz@combined.biz                   4255048   \n",
+      "801                     EmbraceLiving2017              581674581674   \n",
+      "802                              48819300                  48819300   \n",
+      "803                             ResideLiv             1195317502096   \n",
+      "804                    aruiz@combined.biz                   0317057   \n",
+      "805                     bboling@edens.com                   3364346   \n",
+      "806                    aruiz@combined.biz                   3439221   \n",
+      "807                    aruiz@combined.biz                   3439239   \n",
+      "808                            8883200000                8883200000   \n",
+      "809                             SnocoOES1                 203572839   \n",
+      "810                    aruiz@combined.biz                   4272944   \n",
+      "811               enterprise@wegomail.com                9301250000   \n",
+      "812                  utilities1@edens.com                   3364445   \n",
+      "813                            thresholds              441331441331   \n",
+      "814                       ap@mataninc.com                   4323531   \n",
+      "815                            thresholds              441424441424   \n",
+      "816                                   bpe  01000000069863/V11235074   \n",
+      "\n",
+      "    Last Datapoint Est Next Datapoint Visible since freelancer_id  \n",
+      "0       2019-06-03         2019-07-03    2019-06-19        aladao  \n",
+      "1       2019-06-03         2019-07-03    2019-06-19        aladao  \n",
+      "2       2019-06-20         2019-07-03           NaN        aladao  \n",
+      "3       2019-06-05         2019-07-03           NaN        aladao  \n",
+      "4       2019-06-02         2019-07-05           NaN        aladao  \n",
+      "5       2019-06-06         2019-07-06    2019-07-09        aladao  \n",
+      "6       2019-06-04         2019-07-08           NaN        aladao  \n",
+      "7       2019-06-04         2019-07-08           NaN        aladao  \n",
+      "8       2019-06-04         2019-07-08           NaN        aladao  \n",
+      "9       2019-06-05         2019-07-08           NaN        aladao  \n",
+      "10      2019-06-04         2019-07-08           NaN        aladao  \n",
+      "11      2019-06-04         2019-07-08           NaN        aladao  \n",
+      "12      2018-07-14         2018-08-13    2019-07-02        aladao  \n",
+      "13      2019-01-24         2019-02-22    2019-06-05        aladao  \n",
+      "14      2018-12-31         2019-04-01           NaN        aladao  \n",
+      "15      2019-03-20         2019-04-16           NaN        aladao  \n",
+      "16      2019-03-20         2019-04-16           NaN        aladao  \n",
+      "17      2019-03-20         2019-04-16           NaN        aladao  \n",
+      "18      2019-03-20         2019-04-16           NaN        aladao  \n",
+      "19      2019-03-20         2019-04-16           NaN        aladao  \n",
+      "20      2019-03-20         2019-04-16           NaN        aladao  \n",
+      "21      2019-03-20         2019-04-16           NaN        aladao  \n",
+      "22      2019-04-04         2019-04-19    2019-06-01        aladao  \n",
+      "23      2019-03-31         2019-04-30           NaN        aladao  \n",
+      "24      2019-03-31         2019-04-30           NaN        aladao  \n",
+      "25      2019-03-31         2019-04-30           NaN        aladao  \n",
+      "26      2019-03-31         2019-04-30           NaN        aladao  \n",
+      "27      2019-03-31         2019-04-30           NaN        aladao  \n",
+      "28      2019-04-05         2019-05-06    2019-07-08        aladao  \n",
+      "29      2019-04-08         2019-05-09    2019-06-14        aladao  \n",
+      "..             ...                ...           ...           ...  \n",
+      "787     2019-07-03         2019-08-04    2019-07-09       rfoster  \n",
+      "788     2019-05-07         2019-08-04    2019-05-31       rfoster  \n",
+      "789     2019-06-27         2019-08-05    2019-07-09       rfoster  \n",
+      "790     2019-05-28         2019-08-06    2019-06-24       rfoster  \n",
+      "791     2019-07-02         2019-08-07    2019-07-08       rfoster  \n",
+      "792     2019-06-26         2019-08-10    2019-06-26       rfoster  \n",
+      "793     2019-06-11         2019-08-10    2019-07-08       rfoster  \n",
+      "794     2019-04-24         2019-08-11    2019-07-08       rfoster  \n",
+      "795     2019-04-24         2019-08-13    2019-07-07       rfoster  \n",
+      "796     2019-04-17         2019-08-14    2019-06-05       rfoster  \n",
+      "797     2019-06-21         2019-08-15    2019-07-02       rfoster  \n",
+      "798     2019-06-18         2019-08-15    2019-06-19       rfoster  \n",
+      "799     2019-06-10         2019-08-17    2019-07-03       rfoster  \n",
+      "800     2019-05-21         2019-08-23    2019-06-13       rfoster  \n",
+      "801     2019-06-24         2019-08-24    2019-07-03       rfoster  \n",
+      "802     2019-06-25         2019-08-25    2019-07-09       rfoster  \n",
+      "803     2019-06-21         2019-08-27    2019-07-02       rfoster  \n",
+      "804     2019-06-10         2019-08-29    2019-06-14       rfoster  \n",
+      "805     2019-05-01         2019-08-29    2019-06-07       rfoster  \n",
+      "806     2019-05-30         2019-08-29    2019-06-07       rfoster  \n",
+      "807     2019-05-30         2019-08-29    2019-06-08       rfoster  \n",
+      "808     2019-05-31         2019-08-30    2019-06-03       rfoster  \n",
+      "809     2019-06-13         2019-09-05    2019-06-25       rfoster  \n",
+      "810     2019-05-30         2019-09-07    2019-06-13       rfoster  \n",
+      "811     2019-06-07         2019-09-08    2019-07-08       rfoster  \n",
+      "812     2019-05-01         2019-09-15    2019-07-06       rfoster  \n",
+      "813     2019-06-06         2019-09-29    2019-07-02       rfoster  \n",
+      "814     2019-06-07         2019-10-08    2019-07-05       rfoster  \n",
+      "815     2019-06-06         2019-10-17    2019-07-07       rfoster  \n",
+      "816     2019-05-29         2020-02-04           NaN       rfoster  \n",
+      "\n",
+      "[12252 rows x 8 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "## Joining all dashboards\n",
     "import pandas as pd\n",
@@ -143,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,39 +353,33 @@
     "\n",
     "import numpy as np\n",
     "from datetime import datetime, timedelta\n",
-    "today = (datetime.today()-timedelta(10)).strftime('%Y-%m-%d')\n",
+    "today = (datetime.today()-timedelta(5)).strftime('%Y-%m-%d')\n",
     "\n",
     "## Total number of accounts by freelancer\n",
     "\n",
     "# Filter data so we're only looking at accounts with an Est Next Datapoint in the past/ with blank Est Next Datapoints\n",
-    "fl_filter = freelancers[(freelancers['Est Next Datapoint'] <= today)| (freelancers['Est Next Datapoint'].isnull())]\n",
-    "# Count number of out-of-date meters by freelancer\n",
-    "old_meter_count = fl_filter.groupby(['freelancer_id','Utility Company'])['Account Number'].count()\n",
-    "old_meter_count = old_meter_count.groupby(level=0, group_keys=False).nlargest(5)\n",
-    "old_meter_count = old_meter_count.to_frame().head(30)\n",
-    "\n",
-    "\n",
-    "# fl_filter.sort_values(['freelancer_id',''])\n",
-    "\n",
-    "\n",
-    "# import pandas as pd\n",
-    "# import numpy as np\n",
-    "# def is_dataframe(x):\n",
-    "#     if isinstance(x, pd.DataFrame):\n",
-    "#         print(1)\n",
-    "#     else:\n",
-    "#         raise Exception('wrong type')\n",
+    "fl_filter = freelancers[(freelancers['Est Next Datapoint'].isnull())\n",
+    "                        & (freelancers['Visible since'] <= today)\n",
+    "                        |(freelancers['Visible since'] <= today)\n",
+    "                        &(freelancers['Est Next Datapoint'] <= today)]\n",
+    "                         \n",
+    "                        \n",
+    "#     and if freelancers[(freelancers['Visible Since'].notnull()) & (freelancers['Est Next Datapoint'].notnull())]:\n",
     "        \n",
-    "# import pandas as pd\n",
-    "# import numpy as np\n",
-    "# def is_something_else(l):\n",
-    "#     if isinstance(l,(pd.core.series.Series)):\n",
-    "#         print(5)\n",
-    "#     else:\n",
-    "#         raise Exception('wrong type')\n",
-    "        \n",
-    "# is_something_else(old_meter_count)\n",
-    "\n"
+    "#         freelancers[(freelancers['Est Next Datapoint'] <= today)]\n",
+    "#         freelancers[(freelancers['Est Next Datapoint'].isnull())] \n",
+    "#         freelancers[(freelancers)['Visible Since'] <= today]\n",
+    "fl_filter.to_excel('test1.xlsx')\n",
+    "# # Count number of out-of-date meters by freelancer, then group by utility company and list only top 5 largest\n",
+    "# old_meter_count = fl_filter.groupby(['freelancer_id','Utility Company'])['Account Number'].count()\n",
+    "# old_meter_count = old_meter_count.groupby(level=0, group_keys=False).nlargest(5)\n",
+    "# old_meter_count = old_meter_count.to_frame().head(30)\n",
+    "\n",
+    "# # Count total number of overdue meters by freelancer\n",
+    "# total_count = fl_filter.groupby(['freelancer_id'])['Account Number'].count()\n",
+    "# total_count.head(30)\n",
+    "\n",
+    "# Median Visible since for each total"
    ]
   },
   {
